# openstudyindiabook

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: books.rs  category_book.rs  mod.rs  posts.rs  prelude.rs  user.rs
migration/: .env  Cargo.toml
migration/src/: lib.rs  m20220101_000001_user.rs  m20240210_025537_posts.rs  m20240228_162905_categorybook.rs  m20240228_163624_books.rs  main.rs
src/: lib.rs  main.rs
src/routes/: books.rs  category.rs  hello_server.rs  mod.rs  users.rs
src/socket/: mod.rs  socket_manager.rs
src/utils/: api_error.rs  contstants.rs  guards.rs  jwt.rs  mod.rs
