[package]
name = "openstudyindiabook"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "full"] }
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.1", features = ["cors"] }
serde = { version = "1.0.147", features = ["derive"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
jsonwebtoken = "9.2.0"
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
# argon2 = "0.5.3"
time = { version = "0.3.34", features = ["serde"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
rand_core = { version = "0.6.4", features = ["std"] }
lazy_static = "1.4.0"
socketioxide = "0.10.2"
bcrypt = "0.15.0"
 
